# integrate_rn_opencv_cpp

./: .gitignore  App.tsx  README.md  app.json  package.json  useNativeLib.ts
android/: build.gradle  gradle.properties  settings.gradle
android/app/: CMakeLists.txt  _BUCK  build.gradle
android/app/src/debug/java/com/opencvintegrate/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: Drawer.cpp  Listener.cpp  native-lib.cpp  utils.cpp
android/app/src/main/java/com/opencvintegrate/: MainActivity.java  MainApplication.java  RTCModule.kt  RTCPackage.kt
android/app/src/main/java/com/opencvintegrate/jni/: NativeLib.java
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/OpenCVIntegrate/: AppDelegate.m  Broker.h  Broker.mm  BrokerLeft.h  BrokerLeft.m  BrokerRight.h  BrokerRight.mm  Drawer.cpp  Drawer.hpp  Info.plist  LaunchScreen.storyboard  Listener.hpp  RCTEventEmmiter.h  RCTEventEmmiter.m  UIImage+OpenCvConversion.h  UIImage+OpenCvConversion.mm
ios/OpenCVIntegrate.xcodeproj/: project.pbxproj
ios/OpenCVIntegrate.xcodeproj/xcshareddata/xcschemes/: OpenCVIntegrate.xcscheme
ios/OpenCVIntegrate.xcworkspace/: contents.xcworkspacedata
ios/OpenCVIntegrateTests/: OpenCVIntegrateTests.m
